--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
     </header>
     <main>
-        <div id="mainimage"><img src="Combine_Alumni_2024.jpg" alt="" width="1200px">
+        <div id="mainimage"><img src="Combine_Alumni_2024.jpg" alt="" width="100%" height="270vh">
             <div id="scholarship">
                 <h3 class="iglu"><a href="#" id="baliye">Scholarship</a></h3>
                 <h3 class="iglu"><a href="#" id="baliye">Notices</a></h3>
